# pool-selector

./: .env  .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  deploy.yml  validations.yml
nginx/: nginx.conf
src/event_generator/: Dockerfile  main.py  model.py
src/web_app/: Dockerfile  main.py  utils.py
tests/unit_tests/: test_event_generator.py  test_web_app.py
tests/unit_tests/event_generator/: test_event_generator_main.py  test_event_generator_model.py
tests/unit_tests/web_app/: test_web_app_main.py  test_web_app_utils.py
